tests/fixtures/pass/chain_inferred_inputs.sali
let Boxed = struct(value: i32)

let option_value(): Option(i32) = Option(_).Some(Boxed(20))?.value

let result_value(): Result(i32, bool) = Result(_, _).Ok(Boxed(22))?.value

let main(): i32 = (option_value() ?? 0) + (result_value() ?? 0)
