tests/fixtures/fail/array_resource_temporary_index.sali
let Resource = struct(value: i32)

let main(): i32 = [Resource(42)][0].value
